infra/envoy/envoy.yaml
static_resources:
  listeners:
    - name: main
      address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains: ['*']
                    routes:
                      - match: { prefix: '/' }
                        route: { cluster: imu_api }
              http_filters:
                - name: envoy.filters.http.router
  clusters:
    - name: imu_api
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: imu_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address: { socket_address: { address: imu-api, port_value: 8000 } }
